fixed extra margins on ipad view. Added margins for contact section to center it

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,6 @@ body {
   color: black;
 }
 
-#skills-header, #projects-header{
+#skills-header, #projects-header, #contact-header{
   transform: rotate(-90deg);
 }
